Adds search bar and delegate methods, adds filtering for tableview reload

--- a/people-search-tableview/Views/Base.lproj/Main.storyboard
+++ b/people-search-tableview/Views/Base.lproj/Main.storyboard
@@ -57,6 +57,9 @@
                             <outlet property="delegate" destination="Nuw-in-ZEv" id="HBn-RQ-vXx"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="searchBarOutlet" destination="w1m-9f-bg2" id="WiB-EP-Whr"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7bv-ZJ-J6H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
